Update Python templates

--- a/python-cli/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/python-cli/{{cookiecutter.project_slug}}/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.6"
 importlib-metadata = {version = "^1.0", python = "<3.8"}
+click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.812"
@@ -42,3 +43,6 @@ flake8-builtins = "^1.5.3"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:main"
