--- a/python-pkg/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/python-pkg/{{cookiecutter.project_slug}}/pyproject.toml
@@ -11,6 +11,7 @@ keywords = ["{{ cookiecutter.project_slug }}"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
+    "Intended Audience :: Information Technology",
     "Intended Audience :: Science/Research",
     "Natural Language :: English",
     "Operating System :: OS Independent",
